--- a/public/pages/home/style.css
+++ b/public/pages/home/style.css
@@ -534,7 +534,12 @@ body::before {
 .image-block img {
     width: 100%;
     height: 100%;
+    filter: blur(2px);
     object-fit: cover;
+    transition: all 500ms;
+}
+.image-block.expanded img {
+    filter: blur(0);
 }
 
 .image-block:hover {
@@ -594,23 +599,79 @@ body::before {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #04125c;
+    /* background: linear-gradient(135deg, #04125c 80%, #316FF6); */
+    /* background: radial-gradient(circle 50px at 90% 90%, #316FF6, #04125c); */
+    background: radial-gradient(circle 410px at 100% 180%, #316FF6, #04125c);
     color: #92BDF9;
     /* max-width: 100vw; */
     /* height: 100px; */
     padding: var(--primary-padding);
+    .ft-copyright {
+        padding: 24px 0;
+    }
 }
 
-.landing-page-footer-contanier {
+.landing-page-footer-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 12px;
+    width: 100%;
+    padding: 32px 0;
+}
+
+.ft-grd-1,
+.ft-grd-2 {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #92BDF9;
+    gap: 3px;
+    text-align: left;
+    p{
+        margin-bottom: 8px;
+        font-size: .975rem;
+        color: #92BDF9;
+        line-height: 1.1;
+    }
+    a {
+        font-size: 1rem;
+        font-weight: var(--light);
+        color: #f9f9f9;
+        cursor: pointer;
+        width: min-content;
+        white-space: nowrap;
+        transition: 50ms;
+    }
+    a:hover{
+        color: #458ecc;
+    }
 }
 
-.footer-links-grid
+.ft-grd-3 {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    justify-content: center;
+    p {
+        line-height: 1.1;
+        margin-bottom: 8px;
+        font-size: .975rem;
+        color: #92BDF9;
+        text-align: left;
+    }
+    .ft-socials {
+        display: flex;
+        gap: 8px;
+    }
+    span {
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        background: #92BDF9;
+        display: grid;
+        place-items: center;
+        fill: #f9f9f9;
+    }
 
+}
 
 .landing-page-navbar {
     animation: fade 1s linear
@@ -977,6 +1038,7 @@ span.prev {
     text-align: center;
     font-size: 2rem;
     letter-spacing: 2px;
+    white-space: nowrap;
     /* line-height: 1.2; */
     text-transform: uppercase;
     font-weight: var(--extra-bold);
@@ -1386,6 +1448,7 @@ span.prev {
 .buttons {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 10px;
     margin: 10vh 0 0 0;
 }
@@ -1397,6 +1460,7 @@ span.prev {
     background: linear-gradient(135deg, #316FF6 95%, #92BDF9);
     color: white;
     font-weight: bold;
+    white-space: nowrap;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
     transition: all 0.2s;
 }
@@ -1798,6 +1862,8 @@ section.Digital-resources {
     background: #316FF6;
     min-height: 100vh;
     position: relative;
+    z-index: 1;
+    padding: 0 0 8rem 0;
 }
 
 .last-section-wrapper {
@@ -1930,7 +1996,7 @@ section.Digital-resources {
     .dup-txt span {
         writing-mode: vertical-lr;
         transform: rotate(180deg);
-        font-size: 3.2rem;
+        font-size: 3rem;
     }
 
     .hero-section-1 {
@@ -1947,11 +2013,6 @@ section.Digital-resources {
         line-height: 1.6;
         margin-bottom: 45px;
     }
-
-    .dup-txt span {
-        font-size: 3rem;
-    }
-
     .dup-txt span:nth-child(even) {
         -webkit-text-stroke: 3px #316FF6;
     }
@@ -2190,5 +2251,14 @@ section.Digital-resources {
 
     .section p {
         font-size: .985rem;
+    }
+    .right-txt p {
+        max-width: 680px;
+        font-size: 16px;
+        text-align: center;
+    }
+    .dup-txt span {
+        /* font-size: 1.8rem; */
+        font-size: 1.8rem;
     }
 }
