--- a/public/pages/home/style.css
+++ b/public/pages/home/style.css
@@ -591,20 +591,13 @@ body::before {
     transform: rotate(0deg);
 }
 
-
-
-
 .landing-page-footer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background: linear-gradient(135deg, #04125c 80%, #316FF6); */
-    /* background: radial-gradient(circle 50px at 90% 90%, #316FF6, #04125c); */
-    background: radial-gradient(circle 410px at 100% 180%, #316FF6, #04125c);
+    background: radial-gradient(circle 410px at 105% 120%, #316FF6, #04125c);
     color: #92BDF9;
-    /* max-width: 100vw; */
-    /* height: 100px; */
     padding: var(--primary-padding);
     .ft-copyright {
         padding: 24px 0;
@@ -670,7 +663,13 @@ body::before {
         place-items: center;
         fill: #f9f9f9;
     }
-
+    .kc-icon{
+        img{
+            width: 50%;
+            height: 50%;
+            object-fit: cover;
+        }
+    }
 }
 
 .landing-page-navbar {
@@ -926,7 +925,7 @@ body::before {
     margin: 15px 0px;
     width: 100%;
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.2); */
 }
 
 .slides-row {
@@ -1859,7 +1858,8 @@ section.Digital-resources {
 }
 
 .last-section {
-    background: #316FF6;
+    /* background: #316FF6; */
+    background: linear-gradient(360deg, #04125c, #316FF6 70%);
     min-height: 100vh;
     position: relative;
     z-index: 1;
